# arl_gazebo_sim_ros

arl_gazebo_sim/: CMakeLists.txt  package.xml
arl_gazebo_sim/gz/uav_sim/launch/: uav_gz_cargo_inspection.launch  uav_gz_cave_exploration.launch
arl_gazebo_sim/gz/uav_sim/uav_gazebo/launch/: spawn_uav.launch
arl_gazebo_sim/gz/uav_sim/uav_gazebo/launch/rmf_owl/: topics.launch
arl_gazebo_sim/gz/uav_sim/uav_gazebo/models/rmf_owl/: model.sdf
arl_gazebo_sim/gz/ugv_sim/ugv_gazebo/: package.xml
arl_gazebo_sim/gz/ugv_sim/ugv_gazebo/launch/: spawn_ugv.launch
arl_gazebo_sim/gz/ugv_sim/ugv_gazebo/launch/marble_husky/: topics.launch
arl_gazebo_sim/gz/ugv_sim/ugv_gazebo/models/husky/: model.sdf
arl_gazebo_sim/gz/ugv_sim/ugv_gazebo/models/marble_husky/: model.sdf  model_v1.sdf  model_v3.sdf
arl_gazebo_sim/gz/worlds/: cargo_hold.world  darpa_cave_01.world
arl_gazebo_sim/gzc/uav_sim/launch/: uav_gzc_bwt_inspection.launch  uav_gzc_cave_exploration.launch  uav_gzc_niosh_exploration.launch  uav_gzc_subt_final_exploration.launch
arl_gazebo_sim/gzc/ugv_sim/launch/: ugv_gzc_niosh_exploration.launch  ugv_gzc_urban_exploration.launch
arl_gazebo_sim/gzc/worlds/: bwt_4x3_2floors.world  darpa_cave_01.world  darpa_subt_final_circuit.world  niosh_osrf.world  pittsburgh_mine.world  urban_circuit_01.world
uav_gz_control/: CMakeLists.txt  package.xml
uav_gz_control/include/: uav_path_follower_node.h
uav_gz_control/src/: uav_path_follower_node.cpp
